<resources>
    <string name="app_name">hocbanglaixemay</string>
    <string name="s_1">Đề số 1</string>
    <string name="s_3">Đề số 3</string>
    <string name="s_4">Đề số 4</string>
    <string name="s_2">Đề số 2</string>
    <string name="_1_b_nghi_m_c_m">1.Bị nghiêm cấm.</string>
    <string name="_2_kh_ng_b_nghi_m_c_m">2.Không bị nghiêm cấm.</string>
    <string name="ng_i_tham_gia_giao_th_ng_m_trong_c_th_c_ch_t_ma_t_y_c_b_nghi_m_c_m_kh_ng">Người tham gia giao thông mà trong cơ thể có chất ma túy có bị nghiêm cấm không?</string>
    <string name="s_1_c_u_1_25">Đề số 1(câu 1/25)</string>
    <string name="_3_kh_ng_b_nghi_m_c_m_n_u_ch_t_ma_t_y_m_c_nh">3.Không bị nghiêm cấm nếu chất ma túy ở mức nhẹ.</string>
    <string name="ng">đúng</string>
    <string name="sai">sai</string>
    <string name="ki_m_tra">Kiểm tra</string>
</resources>